--- a/style.css
+++ b/style.css
@@ -369,7 +369,7 @@ button {
     align-items: center;
     padding: 20px 25px 20px 22px;
     box-shadow: rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    background-color: #e8e8e8;
+    background-color:rgb(255, 110, 110);
     border-color: #ffe2e2;
     border-style: solid;
     border-width: 9px;
@@ -399,14 +399,14 @@ button {
   }
   
   button:hover {
-    background-color: #eee;
+    background-color: #f68686;
     transform: scale(105%);
     animation: movingBorders 3s infinite;
   }
   
   button svg {
     margin-right: 11px;
-    fill: rgb(255, 110, 110);
+    fill: rgb(248, 246, 246);
     transition: opacity 100ms ease-in-out;
   }
   
