--- a/style.css
+++ b/style.css
@@ -136,13 +136,14 @@ svg .cls-3 {
     position: absolute;
     width: 150px;
     height: 150px;
-    border-radius: 50%;
+    border-radius:  50%;
     overflow: hidden;
     z-index: 1000;
     transform: scale(0);
     top: 28%;
-    box-shadow: 2px 8px 10px rgba(0, 0, 0, 0.4);
-    animation: imageAvt 2s 6s forwards alternate;
+    cursor: pointer;
+    box-shadow: 2px 8px 10px rgba(0, 0, 0, 0.449);
+    animation: imageAvt 2s 2s forwards alternate;
 }
 
 @keyframes imageAvt {
@@ -369,7 +370,7 @@ button {
     align-items: center;
     padding: 20px 25px 20px 22px;
     box-shadow: rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    background-color:rgb(241, 212, 212);
+    background-color:rgb(243, 169, 169);
     border-color: #fcb3b3;
     border-style: solid;
     border-width: 9px;
@@ -382,19 +383,20 @@ button {
     border-color 400ms ease-in-out,
     background-color 400ms ease-in-out;
     word-spacing: -2px;
+    
   }
   
   @keyframes movingBorders {
     0% {
-      border-color: #fce4e4;
+      border-color: #f89494;
     }
   
     50% {
-      border-color: #ffd8d8;
+      border-color: #f89494;
     }
   
     90% {
-      border-color: #fce4e4;
+      border-color: #f89494;
     }
   }
   
@@ -402,12 +404,14 @@ button {
     background-color: #f89494;
     transform: scale(105%);
     animation: movingBorders 3s infinite;
+    
   }
   
   button svg {
     margin-right: 11px;
     fill: rgb(248, 246, 246);
     transition: opacity 100ms ease-in-out;
+    animation: beatingHeart 1.2s infinite;
   }
   
   .filled {
